--- a/service/package.json
+++ b/service/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.21.1",
+    "mongodb": "^6.10.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
